--- a/chat/index.htm
+++ b/chat/index.htm
@@ -4,14 +4,15 @@
     <title>WebRTC client</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font: 13px Helvetica, Arial; }
         form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-        form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-        form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+        form input { padding: 10px; width: 70%; margin-right: .5%; }
+        form button { width: 25%; }
         #messages { list-style-type: none; margin: 0; padding: 0; }
         #messages li { padding: 5px 10px; }
-        #messages li:nth-child(odd) { background: rgb(184, 23, 23); }
+        #messages li:nth-child(odd) { background-color: rgba(184, 23, 23, 0.3); }
       </style>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     </head>
   </head>
   <body>
@@ -35,14 +36,14 @@
           });
           socket.on('chat message', function(msg) {
             console.log(msg);
-            $('#messages').append($('<li>').text(msg));
+            $('#messages').append($('<li class="list-group-item list-group-item-action">').text(msg));
           });
         });
       </script>
     <body>
-      <ul id="messages"></ul>
+      <ul id="messages" class="list-group"></ul>
       <form action="">
-        <input id="m" autocomplete="off" /><button>Send</button>
+        <input id="m" autocomplete="off" /><button class="btn btn-success">Send</button>
       </form>
   </body>
 </html>
