--- a/chat/index.htm
+++ b/chat/index.htm
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WebRTC client</title>
+    <title>Let's Chat</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+        form { background: #000; padding: 3px; }
         form input { padding: 10px; width: 70%; margin-right: .5%; }
         form button { width: 25%; }
         #messages { list-style-type: none; margin: 0; padding: 0; }
-        #messages li { padding: 5px 10px; }
-        #messages li:nth-child(odd) { background-color: rgba(184, 23, 23, 0.3); }
+        #messages li:nth-child(odd) { background-color: rgba(0, 0, 255, 0.5); }
       </style>
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
